store-ap/k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: store-app
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
