store-ap/k8s/notifications-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-api
  namespace: store-app
spec:
  selector:
    app: notifications-api
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
