store-ap/k8s/products-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
  namespace: store-app
spec:
  selector:
    app: products-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
