store-ap/k8s/store-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-frontend
  namespace: store-app
spec:
  selector:
    app: store-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
