store-ap/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-app-ingress
  namespace: store-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: store-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-frontend
                port:
                  number: 80
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: products-api
                port:
                  number: 8080
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notifications-api
                port:
                  number: 5001
